# multi-agent-forecaster

./: .env.example  .gitignore  README.md  SPEC.md  main.py  pyproject.toml  requirements.txt
agent_skills/: base_skill.py  feature_engineering_skill.py  hyperparameter_tuning_skill.py  lightgbm_skill.py  lstm_skill.py  metrics_evaluation_skill.py  skill_registry.py  web_research_skill.py  xgboost_skill.py
agents/: base_agent.py
agents/code_generation_agent/: agent.py
agents/leader_agent/: agent.py  decision_engine.py
agents/research_agent/: agent.py
agents/validation_agent/: agent.py
configs/: default.yaml  models.yaml  settings.py
datasets/: data_fetcher.py  walk_forward_splitter.py
evaluation/: diagnostic_engine.py  metric_registry.py  metrics.py  models.py
experiments/: experiment_tracker.py
memory/: experiment_memory.py  shared_memory.py
orchestrator/: edges.py  graph.py  nodes.py
prompts/: codegen_prompts.py  leader_prompts.py  research_prompts.py  validation_prompts.py
state_management/: state_manager.py  state_transitions.py  workflow_state.py
state_management/backends/: memory_backend.py  redis_backend.py
tasks/: plan.md
tests/: test_agents.py  test_diagnostic_engine.py  test_experiment_tracker.py  test_main.py  test_memory.py  test_metrics.py  test_orchestrator.py  test_skills.py  test_state_management.py  test_walk_forward_splitter.py
tools/: logger.py
vector_memory/: chroma_store.py
