[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multi-agent-forecaster"
version = "0.1.0"
description = "Autonomous multi-agent system that iterates through research, code generation and validation to find the optimal predictive model for financial assets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bruno", email = "lbruno086@gmail.com" }]
keywords = ["trading", "forecasting", "multi-agent", "machine-learning", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.0",
    "optuna>=3.0",
    "mlflow>=2.0",
    "chromadb>=0.5",
    "redis>=5.0",
    "structlog>=24.0",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "tavily-python>=0.3",
    "statsmodels>=0.14",
]

[project.scripts]
research-trading = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*",
    "agent_skills*",
    "state_management*",
    "evaluation*",
    "memory*",
    "vector_memory*",
    "orchestrator*",
    "experiments*",
    "datasets*",
    "configs*",
    "prompts*",
    "tools*",
    "api*",
    "backtesting*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[tool.ruff]
line-length = 100
target-version = "py311"
